--- a/style.css
+++ b/style.css
@@ -1,2 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+header{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+header, .img-wrapper, .img-wrapper img{
+    overflow: hidden;
+}
+.img-wrapper, .img-wrapper img{
+    width: 100%;
+    height: 100%;
+}
+.img-wrapper{
+    background-color: rgba(0, 0, 0,0.8);
+}
+.img-wrapper img{
+    object-fit: cover;
+    opacity: 0.5;
+}
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 10%;
+}
+.banner h1{
+    color: #fff;
+    font-size: 3.5rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .2rem .2rem 2px rgba(0, 0, 0,0.4);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+}
+.banner p{
+    font-family: "Josefin Slab", serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem rgba(0,0,0,0.4);
+    margin-bottom: 2rem;
+}
+.banner button{
+    font-family: "Mulish", serif;
+    color: black;
+    padding-top: .1rem;
+    padding-right: .2rem;
+    padding-bottom: .1rem;
+    padding-left: .2rem;
+    background: #7F00FF;
+    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);
+    background: linear-gradient(to left, #E100FF, #7F00FF);
+
+
+}
