--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ header, .img-wrapper, .img-wrapper img{
 .img-wrapper img{
     object-fit: cover;
     opacity: 0.5;
+    animation: zoom 25s;
+}
+@keyframes zoom {
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 .banner{
     position: absolute;
@@ -37,6 +46,8 @@ header, .img-wrapper, .img-wrapper img{
     text-shadow: .2rem .2rem 2px rgba(0, 0, 0,0.4);
     line-height: 3.5rem;
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
 }
 .banner p{
     font-family: "Josefin Slab", serif;
@@ -44,17 +55,30 @@ header, .img-wrapper, .img-wrapper img{
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0,0,0,0.4);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
 }
 .banner button{
     font-family: "Mulish", serif;
-    color: black;
-    padding-top: .1rem;
-    padding-right: .2rem;
-    padding-bottom: .1rem;
-    padding-left: .2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: #fff;
+    padding: 1rem 3rem;
     background: #7F00FF;
     background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);
     background: linear-gradient(to left, #E100FF, #7F00FF);
-
-
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
+}
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1  ;
+    }
 }
